--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "scripts": {
     "start": "run-p start:front start:back",
     "start:front": "parcel --port 8000 index.html",
-    "start:back": "json-server --port 8001 db.json"
+    "start:back": "json-server --port 8001 db.json",
+    "format": "prettier --write \"src/**/*.{js,jsx,json,md,ts,tsx,css}\""
   },
   "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "npm-run-all": "^4.1.5",
-    "parcel-bundler": "^1.12.3"
+    "parcel-bundler": "^1.12.3",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
-    "json-server": "^0.15.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1"
+    "json-server": "^0.16.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0"
   }
 }
