--- a/package.json
+++ b/package.json
@@ -5,15 +5,36 @@
     "start": "run-p start:front start:back",
     "start:front": "parcel --port 8000 index.html",
     "start:back": "json-server --port 8001 db.json",
-    "format": "prettier --write \"src/**/*.{js,jsx,json,md,ts,tsx,css}\""
+    "format": "prettier --write \"src/**/*.{js,jsx,json,md,ts,tsx,css}\"",
+    "dev": "cross-env NODE_ENV=development webpack serve --open --color --progress",
+    "build": "cross-env NODE_ENV=production webpack --color --progress",
+    "fullDev": "run-p start:back dev"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.0.1",
+    "html-webpack-plugin": "^4.5.1",
+    "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.3",
-    "typescript": "^4.1.3"
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.1",
+    "typescript": "^4.1.3",
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "json-server": "^0.16.3",
