--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "json-server": "^0.16.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.14.2",
     "react-router-dom": "^5.2.0"
   }
 }
